<resources>
    <string name="app_name">DataBinding_Demo</string>

    <string name="listView">ListView</string>
    <string name="gridView">GridView</string>
    <string name="horizontalListView">HorizontalListView</string>
    <string name="horizontalGridView">HorizontalGridView</string>
    <string name="listView_Header">ListView_Header</string>
    <string name="listView_Footer">ListView_Footer</string>
    <string name="staggeredView">StaggeredView</string>
    <string name="version_update">版本更新</string>

    <string name="recyclerViewType">类型</string>

    <string name="male">男</string>
    <string name="female">女</string>

    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="title_activity_list_show">ListShowActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
